--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -44,7 +44,7 @@
         android:inputType="number" />
 
     <Button
-        android:id="@+id/boton_agregar"
+        android:id="@+id/boton_editar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Agregar" />
